[package]
name = "eutils-rs"
description = "Commonly used toolsets"
repository = "https://github.com/chengshuyi/eutils-rs"
homepage = "https://github.com/chengshuyi/eutils-rs"
version = "0.1.0"
edition = "2021"
authors = ["Shuyi Cheng <c15271843451@outlook.com>"]
keywords = ["bpf", "ebpf", "ebpfutils"]
license = "GNU General Public License v3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
anyhow = "1.0"
regex = "1"
log = "0.4.17"